--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,12 @@
 			<version>${tapestry-release-version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.tynamo</groupId>
+			<artifactId>tapestry-security</artifactId>
+			<version>0.4.4</version>
+		</dependency>
+
 		<!-- Uncomment this to add support for file uploads: <dependency> <groupId>org.apache.tapestry</groupId> 
 			<artifactId>tapestry-upload</artifactId> <version>${tapestry-release-version}</version> 
 			</dependency> -->
