--- a/src/main/resources/blogConfig.properties
+++ b/src/main/resources/blogConfig.properties
@@ -5,6 +5,6 @@ database.jdbc.url=jdbc:h2:mem:newmodule;INIT=CREATE SCHEMA IF NOT EXISTS metacod
 database.connectionpool.initsize=10
 database.connectionpool.maxactive=40
 database.hibernate.dialect=org.hibernate.dialect.H2Dialect
-hibernate.hbm2ddl.auto=create
+hibernate.hbm2ddl.auto=update
 hibernate.showsql=true
 hibernate.defaultschema=metacoderblog
