--- a/pom.xml
+++ b/pom.xml
@@ -160,6 +160,15 @@
 		<finalName>blog</finalName>
 		<plugins>
 			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>tomcat-maven-plugin</artifactId>
+				<configuration>
+					<url>http://metacoder.de:8180/manager/html</url>
+					<server>tomcat.coding4coffee.org</server>
+					<path>/</path>
+				</configuration>
+			</plugin>
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>2.3.2</version>
