--- a/pom.xml
+++ b/pom.xml
@@ -98,10 +98,16 @@
 			<artifactId>commons-dbcp</artifactId>
 			<version>1.4</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 			<version>3.1</version>
+		</dependency>
+		<dependency>
+    		<groupId>org.apache.commons</groupId>
+    		<artifactId>commons-io</artifactId>
+    		<version>1.3.2</version>
 		</dependency>
 
 		<dependency>
@@ -234,12 +240,6 @@
 						</connector>
 					</connectors>
 
-					<!-- Log to the console. -->
-					<requestLog implementation="org.eclipse.jetty.server.NCSARequestLog">
-						<!-- This doesn't do anything for Jetty, but is a workaround for a 
-							Maven bug that prevents the requestLog from being set. -->
-						<append>true</append>
-					</requestLog>
 					<systemProperties>
 						<systemProperty>
 							<name>tapestry.execution-mode</name>
