--- a/pom.xml
+++ b/pom.xml
@@ -185,7 +185,7 @@
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>tomcat-maven-plugin</artifactId>
 				<configuration>
-					<url>http://metacoder.de:8180/manager/html</url>
+					<url>http://metacoder.de:8180/manager/text</url>
 					<server>tomcat.coding4coffee.org</server>
 					<path>/</path>
 				</configuration>
