--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -21,7 +21,11 @@
 		<param-name>contextConfigLocation</param-name>
 		<param-value>classpath:/applicationContext.xml</param-value>
 	</context-param>
-	
+
+	<filter>
+		<filter-name>nfslogger</filter-name>
+		<filter-class>de.metacoder.blog.jax.NFSLoggingFilter</filter-class>
+	</filter>	
 	<filter>
 		<filter-name>app</filter-name>
 		<filter-class>org.apache.tapestry5.spring.TapestrySpringFilter</filter-class>
@@ -39,6 +43,10 @@
 
 	<!-- it's required to load the oemInViewFilter BEFORE the tapestry filter! -->
 
+	<filter-mapping>
+		<filter-name>nfslogger</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 	<filter-mapping>
 		<filter-name>oemInViewFilter</filter-name>
 		<url-pattern>/*</url-pattern>
