--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,12 @@
 		    <artifactId>ehcache-core</artifactId>
 		    <version>2.6.5</version>
 		</dependency>
+		
+		<dependency>
+	    	<groupId>net.sf.ehcache</groupId>
+	    	<artifactId>ehcache-web</artifactId>
+	    	<version>2.0.4</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework</groupId>
