--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -23,9 +23,19 @@
 	</context-param>
 	
 	<filter>
+		<filter-name>CachingFilter</filter-name>
+		<filter-class>net.sf.ehcache.constructs.web.filter.SimplePageCachingFilter</filter-class>
+		<init-param>
+			<param-name>cacheName</param-name>
+			<param-value>globalPageCache</param-value>
+		</init-param>
+	</filter>
+
+	<filter>
 		<filter-name>app</filter-name>
 		<filter-class>org.apache.tapestry5.spring.TapestrySpringFilter</filter-class>
 	</filter>
+	
 	<filter>
 		<filter-name>oemInViewFilter</filter-name>
 		<filter-class>
@@ -36,8 +46,14 @@
 			<param-value>entityManagerFactory</param-value>
 		</init-param>
 	</filter>
+	
 
 	<!-- it's required to load the oemInViewFilter BEFORE the tapestry filter! -->
+
+	<filter-mapping>
+		<filter-name>CachingFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 
 	<filter-mapping>
 		<filter-name>oemInViewFilter</filter-name>
