--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -50,10 +50,10 @@
 
 	<!-- it's required to load the oemInViewFilter BEFORE the tapestry filter! -->
 
-	<filter-mapping>
+	<!-- <filter-mapping>
 		<filter-name>CachingFilter</filter-name>
 		<url-pattern>/*</url-pattern>
-	</filter-mapping>
+	</filter-mapping> -->
 
 	<filter-mapping>
 		<filter-name>oemInViewFilter</filter-name>
