--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -23,15 +23,6 @@
 	</context-param>
 	
 	<filter>
-		<filter-name>CachingFilter</filter-name>
-		<filter-class>net.sf.ehcache.constructs.web.filter.SimplePageCachingFilter</filter-class>
-		<init-param>
-			<param-name>cacheName</param-name>
-			<param-value>globalPageCache</param-value>
-		</init-param>
-	</filter>
-
-	<filter>
 		<filter-name>app</filter-name>
 		<filter-class>org.apache.tapestry5.spring.TapestrySpringFilter</filter-class>
 	</filter>
@@ -50,11 +41,6 @@
 
 	<!-- it's required to load the oemInViewFilter BEFORE the tapestry filter! -->
 
-	<!-- <filter-mapping>
-		<filter-name>CachingFilter</filter-name>
-		<url-pattern>/*</url-pattern>
-	</filter-mapping> -->
-
 	<filter-mapping>
 		<filter-name>oemInViewFilter</filter-name>
 		<url-pattern>/*</url-pattern>
@@ -64,6 +50,16 @@
 		<filter-name>app</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+
+    <servlet>
+        <servlet-name>dispatcherServlet</servlet-name>
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+    </servlet>
+    
+    <servlet-mapping>
+        <servlet-name>dispatcherServlet</servlet-name>
+        <url-pattern>/services/*</url-pattern>
+    </servlet-mapping>
 
 
 </web-app>
