--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -19,7 +19,7 @@
 	</context-param>
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath:/applicationContext.xml</param-value>
+		<param-value>classpath:/spring/applicationContext.xml</param-value>
 	</context-param>
 	
 	<filter>
